Fix arrow icon alignment

--- a/styles.css
+++ b/styles.css
@@ -121,33 +121,11 @@ a {
 }
 .arrow-icon {
   display:inline-block;
-  width:19px;
-  height:19px;
-  flex:0 0 19px;
-  position:relative;
+  width:22px;
+  height:22px;
+  flex:0 0 22px;
   vertical-align:middle;
   color:currentColor;
-}
-.arrow-icon:before {
-  content:'';
-  position:absolute;
-  left:1px;
-  bottom:3px;
-  width:16px;
-  height:1.5px;
-  background:currentColor;
-  transform:rotate(-45deg);
-  transform-origin:center;
-}
-.arrow-icon:after {
-  content:'';
-  position:absolute;
-  top:1px;
-  right:1px;
-  width:7px;
-  height:7px;
-  border-top:1.5px solid currentColor;
-  border-right:1.5px solid currentColor;
 }
 .menu-btn {
   display:none;
